# Selgis-ML

./: .gitignore  API.md  CHANGELOG.md  CHANGELOG_0.2.5.md  LICENSE  README.md  __init__.py  config.example.yaml  config.py  core.py  example_selgis.py  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt  scheduler.py  test_selgis.py  trainer.py  utils.py
.github/workflows/: python-publish.yml
selgis/: __init__.py  callbacks.py  checkpointing.py  cli.py  config.py  core.py  datasets.py  loss.py  lr_finder.py  scheduler.py  trainer.py  utils.py
selgis/datasets/: __init__.py  base.py  config.py  custom.py  factory.py  image.py  multimodal.py  streaming.py  text.py
