[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selgis"
version = "0.2.31"
description = "Universal Training Framework for PyTorch and HuggingFace Transformers"
readme = "README.md"
license = { text = "Apache 2.0" }
requires-python = ">=3.10"
authors = [{ name = "Selgis ML" }]
keywords = ["pytorch", "transformers", "training", "lora", "peft", "deep-learning", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.20",
    "tqdm",
]

[project.optional-dependencies]
# Transformers base + accelerate (required for device_map="auto")
transformers = [
    "transformers>=4.30",
    "datasets",
    "accelerate>=0.21.0"
]

# For LoRA / QLoRA
peft = ["peft>=0.5.0"]

# For LLM training (4-bit/8-bit quantization)
llm = [
    "bitsandbytes>=0.41.0",
    "accelerate>=0.21.0",
    "scipy"
]

# Logging
tracking = ["wandb"]

# Development
dev = ["pytest", "pytest-cov", "ruff>=0.1"]

# Install all: pip install selgis[all]
all = [
    "transformers>=4.30",
    "datasets",
    "accelerate>=0.21.0",
    "peft>=0.5.0",
    "bitsandbytes>=0.41.0",
    "scipy",
    "wandb"
]

[project.scripts]
selgis = "selgis.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["selgis*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]
